deployment/base/ingress/nginx-chart.yaml
---
# Source: nginx-ingress/templates/controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-controller
  namespace: spydle
  labels:
    helm.sh/chart: nginx-ingress-1.4.0
    app.kubernetes.io/name: nginx-ingress
    app.kubernetes.io/instance: nginx-ingress
    app.kubernetes.io/version: "3.7.0"
    app.kubernetes.io/managed-by: Helm
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer # No LoadBalancer because we are on baremetal
  ports:
    - port: 80
      targetPort: 80
      nodePort:
      protocol: TCP
      name: http
    - port: 443
      targetPort: 443
      nodePort:
      protocol: TCP
      name: https
  selector:
    app.kubernetes.io/name: nginx-ingress
    app.kubernetes.io/instance: nginx-ingress
---
# Source: nginx-ingress/templates/controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
  namespace: spydle
  labels:
    helm.sh/chart: nginx-ingress-1.4.0
    app.kubernetes.io/name: nginx-ingress
    app.kubernetes.io/instance: nginx-ingress
    app.kubernetes.io/version: "3.7.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx-ingress
      app.kubernetes.io/instance: nginx-ingress
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx-ingress
        app.kubernetes.io/instance: nginx-ingress
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9113"
        prometheus.io/scheme: "http"
    spec:
      volumes: [ ]
      serviceAccountName: nginx-ingress
      automountServiceAccountToken: true
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 30
      hostNetwork: false
      dnsPolicy: ClusterFirst
      containers:
        - image: nginx/nginx-ingress:3.7.0
          name: nginx-ingress
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: https
              containerPort: 443
              protocol: TCP
            - name: prometheus
              containerPort: 9113
            - name: readiness-port
              containerPort: 8081
          readinessProbe:
            httpGet:
              path: /nginx-ready
              port: readiness-port
            periodSeconds: 1
            initialDelaySeconds: 0
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsUser: 101 #nginx
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          volumeMounts: [ ]
          args:
            - -nginx-plus=false
            - -nginx-reload-timeout=60000
            - -enable-app-protect=false
            - -enable-app-protect-dos=false
            - -nginx-configmaps=$(POD_NAMESPACE)/nginx-ingress
            - -ingress-class=nginx
            - -health-status=false
            - -health-status-uri=/nginx-health
            - -nginx-debug=false
            - -v=1
            - -nginx-status=true
            - -nginx-status-port=8080
            - -nginx-status-allow-cidrs=127.0.0.1
            - -report-ingress-status
            - -external-service=nginx-ingress-controller
            - -enable-leader-election=true
            - -leader-election-lock-name=nginx-ingress-leader-election
            - -enable-prometheus-metrics=true
            - -prometheus-metrics-listen-port=9113
            - -prometheus-tls-secret=
            - -enable-service-insight=false
            - -service-insight-listen-port=9114
            - -service-insight-tls-secret=
            - -enable-custom-resources=true
            - -enable-snippets=false
            - -disable-ipv6=false
            - -enable-tls-passthrough=false
            - -enable-cert-manager=false
            - -enable-oidc=false
            - -enable-external-dns=false
            - -default-http-listener-port=80
            - -default-https-listener-port=443
            - -ready-status=true
            - -ready-status-port=8081
            - -enable-latency-metrics=false
            - -ssl-dynamic-reload=true
            - -enable-telemetry-reporting=true
            - -weight-changes-dynamic-reload=false
---
# Source: nginx-ingress/templates/controller-ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
  labels:
    helm.sh/chart: nginx-ingress-1.4.0
    app.kubernetes.io/name: nginx-ingress
    app.kubernetes.io/instance: nginx-ingress
    app.kubernetes.io/version: "3.7.0"
    app.kubernetes.io/managed-by: Helm
spec:
  controller: nginx.org/ingress-controller
