deployment/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matchmaker-ingress
  namespace: spydle
  annotations:
#    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: totallyspies.dev  # Replace with your domain
      http:
        paths: # Do not expose autoscale
          - path: /create-game
            pathType: Prefix
            backend:
              service:
                name: matchmaker-service
                port:
                  number: 8080
          - path: /join-game
            pathType: Prefix
            backend:
              service:
                name: matchmaker-service
                port:
                  number: 8080
          - path: /leave-game
            pathType: Prefix
            backend:
              service:
                name: matchmaker-service
                port:
                  number: 8080
#  tls:
#    - hosts:
#        - spydle.dev
#      secretName: tls-secret  # TODO Add lets encrypt certs for TLS security
